gen/TypeScriptSimplificadoParser.py
# Generated from .//gen//TypeScriptSimplificado.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TypeScriptSimplificadoParser ( Parser ):

    grammarFileName = "TypeScriptSimplificado.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'const'", "'function'", "'return'", 
                     "'if'", "'else'", "'while'", "'for'", "'number'", "'string'", 
                     "'boolean'", "'void'", "'true'", "'false'", "'console'", 
                     "'log'", "'Math'", "'sqrt'", "'pow'", "'parseInt'", 
                     "'parseFloat'", "'length'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'**'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'&&'", "'||'", "'!'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "';'", "','", "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "FUNCTION", "RETURN", 
                      "IF", "ELSE", "WHILE", "FOR", "NUMBER", "STRING", 
                      "BOOLEAN", "VOID", "TRUE", "FALSE", "CONSOLE", "LOG", 
                      "MATH", "SQRT", "POWFUNC", "PARSEINT", "PARSEFLOAT", 
                      "LENGTH", "ASSIGN", "PLUS", "MINUS", "TIMES", "DIV", 
                      "MOD", "POW", "EQ", "NEQ", "GT", "LT", "GE", "LE", 
                      "AND", "OR", "NOT", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "LBRACE", "RBRACE", "SEMI", "COMMA", "DOT", 
                      "COLON", "ID", "NUMBER_LITERAL", "STRING_LITERAL", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_returnType = 2
    RULE_paramList = 3
    RULE_param = 4
    RULE_typeAnnotation = 5
    RULE_statement = 6
    RULE_block = 7
    RULE_variableDecl = 8
    RULE_assignmentStmt = 9
    RULE_lvalue = 10
    RULE_ifStatement = 11
    RULE_whileStatement = 12
    RULE_forStatement = 13
    RULE_forInit = 14
    RULE_forUpdate = 15
    RULE_returnStatement = 16
    RULE_consoleLogStmt = 17
    RULE_expressionStmt = 18
    RULE_expressionList = 19
    RULE_expression = 20
    RULE_logicalOrExpr = 21
    RULE_logicalAndExpr = 22
    RULE_equalityExpr = 23
    RULE_relationalExpr = 24
    RULE_additiveExpr = 25
    RULE_multiplicativeExpr = 26
    RULE_powerExpr = 27
    RULE_unaryExpr = 28
    RULE_primaryExpr = 29
    RULE_literal = 30
    RULE_arrayLiteral = 31
    RULE_functionCall = 32
    RULE_argumentList = 33
    RULE_mathFunctionCall = 34
    RULE_conversionFunctionCall = 35

    ruleNames =  [ "program", "functionDecl", "returnType", "paramList", 
                   "param", "typeAnnotation", "statement", "block", "variableDecl", 
                   "assignmentStmt", "lvalue", "ifStatement", "whileStatement", 
                   "forStatement", "forInit", "forUpdate", "returnStatement", 
                   "consoleLogStmt", "expressionStmt", "expressionList", 
                   "expression", "logicalOrExpr", "logicalAndExpr", "equalityExpr", 
                   "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "powerExpr", "unaryExpr", "primaryExpr", "literal", "arrayLiteral", 
                   "functionCall", "argumentList", "mathFunctionCall", "conversionFunctionCall" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    FUNCTION=3
    RETURN=4
    IF=5
    ELSE=6
    WHILE=7
    FOR=8
    NUMBER=9
    STRING=10
    BOOLEAN=11
    VOID=12
    TRUE=13
    FALSE=14
    CONSOLE=15
    LOG=16
    MATH=17
    SQRT=18
    POWFUNC=19
    PARSEINT=20
    PARSEFLOAT=21
    LENGTH=22
    ASSIGN=23
    PLUS=24
    MINUS=25
    TIMES=26
    DIV=27
    MOD=28
    POW=29
    EQ=30
    NEQ=31
    GT=32
    LT=33
    GE=34
    LE=35
    AND=36
    OR=37
    NOT=38
    LPAREN=39
    RPAREN=40
    LBRACK=41
    RBRACK=42
    LBRACE=43
    RBRACE=44
    SEMI=45
    COMMA=46
    DOT=47
    COLON=48
    ID=49
    NUMBER_LITERAL=50
    STRING_LITERAL=51
    WS=52
    LINE_COMMENT=53
    BLOCK_COMMENT=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TypeScriptSimplificadoParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptSimplificadoParser.StatementContext)
            else:
                return self.getTypedRuleContext(TypeScriptSimplificadoParser.StatementContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptSimplificadoParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(TypeScriptSimplificadoParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TypeScriptSimplificadoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3952469460836798) != 0):
                self.state = 74
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2, 4, 5, 7, 8, 13, 14, 15, 17, 20, 21, 25, 38, 39, 41, 43, 49, 50, 51]:
                    self.state = 72
                    self.statement()
                    pass
                elif token in [3]:
                    self.state = 73
                    self.functionDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(TypeScriptSimplificadoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(TypeScriptSimplificadoParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(TypeScriptSimplificadoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TypeScriptSimplificadoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TypeScriptSimplificadoParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(TypeScriptSimplificadoParser.COLON, 0)

        def returnType(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.ReturnTypeContext,0)


        def block(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.ParamListContext,0)


        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = TypeScriptSimplificadoParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(TypeScriptSimplificadoParser.FUNCTION)
            self.state = 82
            self.match(TypeScriptSimplificadoParser.ID)
            self.state = 83
            self.match(TypeScriptSimplificadoParser.LPAREN)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==49:
                self.state = 84
                self.paramList()


            self.state = 87
            self.match(TypeScriptSimplificadoParser.RPAREN)
            self.state = 88
            self.match(TypeScriptSimplificadoParser.COLON)
            self.state = 89
            self.returnType()
            self.state = 90
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeAnnotation(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.TypeAnnotationContext,0)


        def VOID(self):
            return self.getToken(TypeScriptSimplificadoParser.VOID, 0)

        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)




    def returnType(self):

        localctx = TypeScriptSimplificadoParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_returnType)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10, 11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.typeAnnotation()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(TypeScriptSimplificadoParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeScriptSimplificadoParser.ParamContext)
            else:
                return self.getTypedRuleContext(TypeScriptSimplificadoParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TypeScriptSimplificadoParser.COMMA)
            else:
                return self.getToken(TypeScriptSimplificadoParser.COMMA, i)

        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = TypeScriptSimplificadoParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.param()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 97
                self.match(TypeScriptSimplificadoParser.COMMA)
                self.state = 98
                self.param()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TypeScriptSimplificadoParser.ID, 0)

        def COLON(self):
            return self.getToken(TypeScriptSimplificadoParser.COLON, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.TypeAnnotationContext,0)


        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = TypeScriptSimplificadoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(TypeScriptSimplificadoParser.ID)
            self.state = 105
            self.match(TypeScriptSimplificadoParser.COLON)
            self.state = 106
            self.typeAnnotation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_typeAnnotation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NumberTypeContext(TypeAnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.TypeAnnotationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(TypeScriptSimplificadoParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberType" ):
                listener.enterNumberType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberType" ):
                listener.exitNumberType(self)


    class BooleanTypeContext(TypeAnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.TypeAnnotationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(TypeScriptSimplificadoParser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanType" ):
                listener.enterBooleanType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanType" ):
                listener.exitBooleanType(self)


    class StringTypeContext(TypeAnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.TypeAnnotationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(TypeScriptSimplificadoParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringType" ):
                listener.enterStringType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringType" ):
                listener.exitStringType(self)


    class NumberArrayTypeContext(TypeAnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.TypeAnnotationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(TypeScriptSimplificadoParser.NUMBER, 0)
        def LBRACK(self):
            return self.getToken(TypeScriptSimplificadoParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(TypeScriptSimplificadoParser.RBRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberArrayType" ):
                listener.enterNumberArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberArrayType" ):
                listener.exitNumberArrayType(self)


    class StringArrayTypeContext(TypeAnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.TypeAnnotationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(TypeScriptSimplificadoParser.STRING, 0)
        def LBRACK(self):
            return self.getToken(TypeScriptSimplificadoParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(TypeScriptSimplificadoParser.RBRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringArrayType" ):
                listener.enterStringArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringArrayType" ):
                listener.exitStringArrayType(self)



    def typeAnnotation(self):

        localctx = TypeScriptSimplificadoParser.TypeAnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeAnnotation)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = TypeScriptSimplificadoParser.NumberTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(TypeScriptSimplificadoParser.NUMBER)
                pass

            elif la_ == 2:
                localctx = TypeScriptSimplificadoParser.StringTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(TypeScriptSimplificadoParser.STRING)
                pass

            elif la_ == 3:
                localctx = TypeScriptSimplificadoParser.BooleanTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(TypeScriptSimplificadoParser.BOOLEAN)
                pass

            elif la_ == 4:
                localctx = TypeScriptSimplificadoParser.NumberArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.match(TypeScriptSimplificadoParser.NUMBER)
                self.state = 112
                self.match(TypeScriptSimplificadoParser.LBRACK)
                self.state = 113
                self.match(TypeScriptSimplificadoParser.RBRACK)
                pass

            elif la_ == 5:
                localctx = TypeScriptSimplificadoParser.StringArrayTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.match(TypeScriptSimplificadoParser.STRING)
                self.state = 115
                self.match(TypeScriptSimplificadoParser.LBRACK)
                self.state = 116
                self.match(TypeScriptSimplificadoParser.RBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeScriptSimplificadoParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RetStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStatement(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.ReturnStatementContext,0)

        def SEMI(self):
            return self.getToken(TypeScriptSimplificadoParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetStmt" ):
                listener.enterRetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetStmt" ):
                listener.exitRetStmt(self)


    class ForStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStatement(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.ForStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)


    class ConsoleStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def consoleLogStmt(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.ConsoleLogStmtContext,0)

        def SEMI(self):
            return self.getToken(TypeScriptSimplificadoParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsoleStmt" ):
                listener.enterConsoleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsoleStmt" ):
                listener.exitConsoleStmt(self)


    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressionStmt(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.ExpressionStmtContext,0)

        def SEMI(self):
            return self.getToken(TypeScriptSimplificadoParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.WhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)


    class BlockStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)


    class AssignStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeScriptSimplificadoParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignmentStmt(self):
            return self.getTypedRuleContext(TypeScriptSimplificadoParser.AssignmentStmtContext,0)

        def SEMI(self):
            return self.getToken(TypeScriptSimplificadoParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)


    class VarDeclStmtContext(StatementContext):
